# ScaledYOLOv4

./: .dockerignore  .gitignore  Dockerfile  README.md  coco2yolo.py  evaluate_coco.py  pyproject.toml  requirements.txt  run_docker.sh  scaled_yolov4.py  setup.py  test.py  train.py
configs/: anchors.yaml
data/: hyp.finetune.voc.yaml  hyp.scratch.yaml
models/: experimental.py
scaledyolov4/: scaled_yolov4.py
scaledyolov4/data/: coco.yaml  coco128.yaml  hyp.finetune.yaml
scaledyolov4/models/: experimental.py  export.py  yolo.py
scaledyolov4/utils/: coco2yolo.py  datasets.py  general.py  torch_utils.py
scaledyolov4/weights/: get_weights.sh
scripts/: detect.py  evaluate_coco.py  inference.py  scaled_yolov4.py  test.py  train.py
utils/: datasets.py  general.py  torch_utils.py
