[tool.poetry]
name = "scaledyolov4"
version = "0.1.0"
description = ""
authors = ["Tien-Cheng <tiencheng@protonmail.com>"]
readme = "README.md"
packages = [{include = "scaledyolov4"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
opencv-python-headless = "^4.6.0.66"
scipy = "^1.9.3"
torch = "^1.13.0"
torchvision = "^0.14.0"
PyYAML = "^6.0"
Pillow = "^9.3.0"
Cython = "^0.29.32"
matplotlib = "^3.6.2"
tqdm = "^4.64.1"
tensorboard = "^2.11.0"
onnx = "^1.12.0"
tritonclient = "^2.28.0"
grpcio = "^1.50.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
gdown = "^4.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
